--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NemSport" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.NemSport" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/bk_red</item>
         <item name="colorPrimaryVariant">@color/bk_gold</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/bk_red_light</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/bk_red</item>
     </style>
 
     <style name="Button.Secondary" parent="ThemeOverlay.AppCompat">
