--- a/app/src/main/res/layout/all_event_item.xml
+++ b/app/src/main/res/layout/all_event_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    app:cardBackgroundColor="@color/card_background"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="20dp"
     app:cardUseCompatPadding="true"
     android:orientation="vertical">
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
-        android:padding="20dp">
+        android:padding="10dp">
 
 
         <LinearLayout
@@ -42,7 +42,7 @@
         </LinearLayout>
 
         <Space
-            android:layout_width="25dp"
+            android:layout_width="50dp"
             android:layout_height="match_parent"/>
 
         <LinearLayout
