--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,15 +16,30 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="2">
-            <CalendarView
-                android:id="@+id/calendarView2"
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"/>
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_border_bottom"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <CalendarView
+                    android:id="@+id/calendarViewSearch"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:minDate="01/01/2021"
+                    android:theme="@style/CalenderViewCustom"
+                    android:dateTextAppearance="@style/CalenderViewDateCustomText"
+                    android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />
+
+            </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/calendarRV"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:scrollbars="vertical">
 
@@ -38,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        app:backgroundTint="@color/bk_gold"
         android:src="@drawable/ic_action_menu_light"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
@@ -51,6 +67,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:src="@drawable/ic_action_add_light"
+        app:backgroundTint="@color/bk_red"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="100dp"
         android:contentDescription="@string/create" />
@@ -64,6 +81,7 @@
         android:layout_alignParentBottom="true"
         android:src="@drawable/ic_action_filter_light"
         android:layout_marginEnd="25dp"
+        app:backgroundTint="@color/bk_red"
         android:layout_marginBottom="175dp"
         android:contentDescription="@string/filter" />
 
