--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/bk_red</item>
         <item name="colorPrimaryVariant">@color/bk_gold</item>
         <item name="colorOnPrimary">@color/white</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/bk_red</item>
     </style>
@@ -19,8 +20,29 @@
     <style name="Theme.NemSport.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.NemSport.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!--
+    CALENDAR THEME
+    https://stackoverflow.com/questions/37301231/android-calendar-view-change-text-color
+    -->
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorAccent">@color/bk_gold</item>
+        <item name="colorPrimary">@color/white</item>
+    </style>
 
-    //https://stackoverflow.com/questions/44492655/customize-firebase-ui-auth-android
+    <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:weekNumberColor">@color/white</item>
+    </style>
+
+    <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
+    <!--
+    FIREBASE AUTH THEME
+    https://stackoverflow.com/questions/44492655/customize-firebase-ui-auth-android
+    -->
     <style name="LoginTheme" parent="FirebaseUI">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -28,7 +50,7 @@
         <item name="colorPrimary">@color/bk_red</item>
         <item name="colorPrimaryDark">@color/bk_red</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/bk_red_light</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/bk_red</item>
     </style>
 
     <style name="FirebaseUI.EditText">
