--- a/app/src/main/res/layout/all_event_item.xml
+++ b/app/src/main/res/layout/all_event_item.xml
@@ -30,13 +30,14 @@
                 android:padding="10dp"
                 android:elevation="5dp"
                 android:background="@drawable/circle_imageview_green"
-                app:srcCompat="@drawable/ic_action_heart_light" />
+                app:srcCompat="@drawable/ic_action_done_light" />
 
             <TextView
                 android:id="@+id/eventAcceptedTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/participate"
+                android:layout_marginTop="5dp"
                 android:textAlignment="center"
                 android:textColor="@color/sub_title" />
         </LinearLayout>
