--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -49,6 +49,7 @@
             app:cardCornerRadius="20dp"
             android:padding="10dp">
             <TextView
+                android:id="@+id/show_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
@@ -57,6 +58,7 @@
         </androidx.cardview.widget.CardView>
 
         <ImageView
+            android:id="@+id/datePicker"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:padding="10dp"
@@ -64,6 +66,17 @@
             android:background="@drawable/circle_imageview_black"
             android:src="@drawable/ic_action_more_light"/>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/vælg_bane" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:layout_width="match_parent"
