--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,19 +43,32 @@
     FIREBASE AUTH THEME
     https://stackoverflow.com/questions/44492655/customize-firebase-ui-auth-android
     -->
+
     <style name="LoginTheme" parent="FirebaseUI">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">top</item>
+        <item name="android:layout_gravity">bottom</item>
         <item name="colorPrimary">@color/bk_red</item>
         <item name="colorPrimaryDark">@color/bk_red</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/bk_red</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorPrimary">@color/black</item>
+
+        <item name="android:textColorSecondary">@color/bk_gold</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+        <item name="android:windowBackground">@drawable/auth_bg</item>
+        <item name="android:icon">@drawable/logo_bkskjold</item>
+
+        <item name="android:textColorHint">@color/bk_gold</item>
+
     </style>
 
     <style name="FirebaseUI.EditText">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="colorControlActivated">@color/black</item>
         <item name="colorControlHighlight">@color/black</item>
         <item name="android:textColorHint">@color/black</item>
@@ -72,5 +85,9 @@
     <style name="FirebaseUI.Text.TextInputLayout" parent="@style/FirebaseUI.EditText" />
 
     <style name="FirebaseUI.Text.HintText" parent="@style/FirebaseUI.EditText" />
+
+    <style name="FirebaseUI.Text.Link">
+        <item name="android:textColor">@color/bk_gold</item>
+    </style>
 
 </resources>
