--- a/app/src/main/res/drawable/round_border_red.xml
+++ b/app/src/main/res/drawable/round_border_red.xml
@@ -2,14 +2,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@android:color/transparent"/>
+        android:color="@android:color/holo_red_dark"/>
 
     <corners
         android:bottomRightRadius="12dp"
         android:bottomLeftRadius="12dp"
         android:topLeftRadius="12dp"
         android:topRightRadius="12dp"/>
-    <stroke
-        android:color="@color/black"
-        android:width="2dp"/>
 </shape>
