--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -45,7 +45,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_border"
+            android:background="@drawable/round_border_red"
             app:cardCornerRadius="20dp"
             android:padding="10dp">
             <TextView
