--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:layout_gravity="center"
-    tools:context=".UI.auth.LoginActivity">
+    tools:context=".UI.auth.ForgotPasswordActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -27,41 +27,14 @@
         android:autofillHints="emailAddress"
         android:minHeight="48dp" />
 
-    <EditText
-        android:id="@+id/pswEt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:autofillHints="emailAddress"
-        android:minHeight="48dp" />
-
     <Button
-        android:id="@+id/loginBtn"
+        android:id="@+id/forgotPasswordBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/round_border_red"
-        android:text="@string/login" />
+        android:text="@string/reset_password" />
 
-    <Button
-        android:id="@+id/to_signupBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/round_border_white"
-        android:textColor="@color/bk_red"
-        android:text="@string/register" />
 
-    <TextView
-        android:id="@+id/forgotPswTxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:textColor="@color/bk_red"
-        android:text="@string/forgot_psw" />
 
 </LinearLayout>
