--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="@string/username"
+        android:hint="@string/mail"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
         android:autofillHints="emailAddress" />
