--- a/app/src/main/res/layout/all_event_item.xml
+++ b/app/src/main/res/layout/all_event_item.xml
@@ -7,7 +7,8 @@
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="20dp"
     app:cardUseCompatPadding="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/eventCard">
 
     <LinearLayout
         android:layout_width="wrap_content"
