--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -88,10 +88,11 @@
 
     <Button
         android:id="@+id/backBtn"
-        android:layout_below="@id/signUpBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_below="@id/signUpBtn"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/back" />
 
 </RelativeLayout>
