--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -14,15 +14,15 @@
         android:layout_marginTop="20dp"/>
 
     <TextView
-        android:id="@+id/profileNameTxt"
+        android:id="@+id/editProfileNameTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:textSize="25dp"
+        android:textStyle="bold"
         android:text="Jens Jørgen Tomassen"
-        android:textAlignment="center"
-        android:textStyle="bold" />
+        android:textAlignment="center" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,12 +32,11 @@
         android:textSize="20dp"
         android:text="@string/userpage_phone" />
 
-    <TextView
-        android:id="@+id/profilePhoneTxt"
+    <EditText
+        android:id="@+id/editProfilePhoneEt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textStyle="bold"
         android:textSize="20dp"
         android:text="10203040" />
 
@@ -49,12 +48,11 @@
         android:textSize="20dp"
         android:text="@string/userpage_mail" />
 
-    <TextView
-        android:id="@+id/profileMailTxt"
+    <EditText
+        android:id="@+id/editProfileMailEt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textStyle="bold"
         android:textSize="20dp"
         android:text="testmail@testmail.test" />
 
@@ -70,23 +68,23 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/editProfileBtn"
+            android:id="@+id/editProfileAcceptBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginBottom="10dp"
             android:background="@drawable/round_border_red"
-            android:text="Rediger Profil" />
+            android:text="@string/edit_userpage_accept" />
 
         <Button
-            android:id="@+id/logoutBtn"
+            android:id="@+id/editProfileCancelBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginTop="10dp"
             android:background="@drawable/round_border_white"
             android:textColor="@color/bk_red"
-            android:text="Log ud" />
+            android:text="@string/edit_userpage_cancel" />
 
     </LinearLayout>
 
