--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -24,16 +24,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:visibility="visible"
                 android:minDate="01/01/2021"
                 android:theme="@style/CalenderViewCustom"
                 android:dateTextAppearance="@style/CalenderViewDateCustomText"
                 android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/calendarToggleCV"
-                android:layout_width="50dp"
-                android:layout_height="5dp"
-                android:layout_marginBottom="10dp"/>
+            <FrameLayout
+                android:id="@+id/calendarToggleFL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="50dp"
+                    android:layout_height="5dp" />
+            </FrameLayout>
 
         </LinearLayout>
 
