--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -59,6 +59,8 @@
         android:layout_alignParentEnd="true"
         app:backgroundTint="@color/bk_gold"
         android:src="@drawable/ic_action_menu_light"
+        android:tint="@color/white"
+
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
         android:contentDescription="@string/menu" />
