--- a/app/src/main/res/layout/all_event_item.xml
+++ b/app/src/main/res/layout/all_event_item.xml
@@ -11,7 +11,7 @@
     android:id="@+id/eventCard">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
@@ -22,36 +22,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1"
             android:layout_gravity="center">
+
             <ImageView
                 android:id="@+id/acceptedIv"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:padding="10dp"
+                android:layout_gravity="center"
                 android:elevation="5dp"
                 android:background="@drawable/circle_imageview_green"
                 app:srcCompat="@drawable/ic_action_done_light" />
 
             <TextView
                 android:id="@+id/eventAcceptedTxt"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/participate"
                 android:layout_marginTop="5dp"
+                android:layout_gravity="center"
                 android:textAlignment="center"
                 android:textColor="@color/sub_title" />
         </LinearLayout>
 
         <Space
-            android:layout_width="50dp"
+            android:layout_width="10dp"
             android:layout_height="match_parent"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="2">
+            android:layout_weight="3">
 
             <TextView
                 android:id="@+id/eventTitleTxt"
@@ -59,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:text="Fodbold"
                 android:textColor="@color/title"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
