--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -68,7 +68,17 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/book_field_time" />
+
+    <Spinner
+        android:id="@+id/timeSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"/>
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/vælg_bane" />
@@ -78,10 +88,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/description_of_event"
+        android:layout_marginTop="10dp"
         android:textAlignment="textStart"
         android:textColor="@color/title" />
 
@@ -106,6 +118,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:background="@drawable/round_border_red"
         android:text="@string/create" />
 
     <Button
@@ -113,6 +126,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:textColor="@color/bk_red"
+        android:background="@drawable/round_border_white"
         android:text="@string/back" />
 
 </LinearLayout>
