delete and update event + design
Co-Authored-By: irisswt <70897754+irisswt@users.noreply.github.com>

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -59,6 +59,7 @@
         android:layout_alignParentEnd="true"
         app:backgroundTint="@color/bk_gold"
         android:src="@drawable/ic_action_menu_light"
+        app:tint="@android:color/white"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
         android:contentDescription="@string/menu" />
@@ -74,24 +75,10 @@
         android:backgroundTint="@color/bk_red"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="100dp"
+        app:tint="@android:color/white"
         app:backgroundTint="@color/white"
         app:borderWidth="1dp"
         android:contentDescription="@string/create" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/filterFab"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_action_filter_light"
-        android:layout_marginEnd="25dp"
-        android:backgroundTint="@color/bk_red"
-        android:layout_marginBottom="175dp"
-        app:backgroundTint="@color/white"
-        app:borderWidth="1dp"
-        android:contentDescription="@string/filter" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/editEventFab"
@@ -102,10 +89,11 @@
         android:layout_alignParentBottom="true"
         android:src="@drawable/ic_action_dashboard_light"
         android:layout_marginEnd="25dp"
+        app:tint="@android:color/white"
         android:backgroundTint="@color/bk_red"
         app:backgroundTint="@color/white"
         app:borderWidth="1dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="175dp"
         android:contentDescription="@string/admin_events" />
 
 </RelativeLayout>
