--- a/app/src/main/res/drawable/round_border_orange.xml
+++ b/app/src/main/res/drawable/round_border_orange.xml
@@ -2,11 +2,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/bk_red"/>
+        android:color="@color/bk_gold"/>
 
     <corners
         android:bottomRightRadius="12dp"
         android:bottomLeftRadius="12dp"
         android:topLeftRadius="12dp"
         android:topRightRadius="12dp"/>
+    <stroke
+        android:color="@color/bk_gold"
+        android:width="2dp"/>
 </shape>
