--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
-    tools:context=".UI.CreateEventActivity">
+    tools:context=".UI.event.CreateEventActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
