--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,9 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:textSize="25dp"
-        android:text="Jens Jørgen Tomassen"
         android:textAlignment="center"
+        android:textSize="25dp"
         android:textStyle="bold" />
 
     <TextView
@@ -37,9 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textStyle="bold"
         android:textSize="20dp"
-        android:text="10203040" />
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,9 +52,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textStyle="bold"
         android:textSize="20dp"
-        android:text="testmail@testmail.test" />
+        android:textStyle="bold" />
 
 
     <LinearLayout
